hphp/test/slow/lang/inst_meth_magic.php.expectf

Fatal error: Uncaught exception 'InvalidOperationException' with message 'Unable to resolve magic call for inst_meth()' in %s/inst_meth_magic.php:9
Stack trace:
%a {main}
